<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_activity_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_black"
        app:title="@string/app_name"
        app:titleTextColor="@color/color_white" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/main_activity_device_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/main_activity_skip_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_color" />

            <Button
                android:id="@+id/main_activity_skip_transparent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_translucent" />

            <Button
                android:id="@+id/main_activity_skip_gradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_gradient" />

            <Button
                android:id="@+id/main_activity_skip_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_fragment" />

            <Button
                android:id="@+id/main_activity_light_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_light_mode"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/main_activity_dark_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_dark_mode"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/main_activity_show_hide_status_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/text_show_hide_status_bar"
                android:textAllCaps="false" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>